--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel=" stylesheet" href="stylesheet.css">
-    <title>Amazing wow</title>
+    <title>Amazing wow 2</title>
 </head>
 <body>
     <header>
