--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#"><strong>Home</strong></a></li>
                     <li><a href="#">Game</a></li>
                     <li><a href="#">Staff</a></li>
                     <li><a href="#">Store</a></li>
