--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <link rel=" stylesheet" href="stylesheet.css">
-    <title>Amazing wow 2</title>
+    <title>Amazing wow</title>
 </head>
 <body>
     <header>
         <div class="container">
-            <a href="#">
+            <a href="index.html">
                 <img src="/assets/logoPNG.png" alt="logo" class="logo">
             </a>
             <nav>
                 <ul>
-                    <li><a href="#"><strong>Home</strong></a></li>
-                    <li><a href="#">Game</a></li>
-                    <li><a href="#">Staff</a></li>
-                    <li><a href="#">Store</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="game.html">Game</a></li>
+                    <li><a href="staff.html">Staff</a></li>
+                    <li><a href="store.html">Store</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+
     <!-- Body  -->
+    <p> This is the home page</p>
 
 
 
