Paragraphed each image and added a title on the Games page

--- a/game.html
+++ b/game.html
@@ -29,10 +29,19 @@
 
 
 <div class="Game-Images">
-    <a> href="index.html">
-        <img src="/assets/unpacking.jpg" alt="Unpacking Game" width="200" height="100">
-        <img src="/assets/keywe-key-art.jpg" alt="KeyWe Game" width="200" height="100">
-        <img src="/assets/snacko.jpg" alt="Snacko Game" width="200" height="100">
+    <a href="index.html">
+        <p>
+            <img src="/assets/unpacking.jpg" alt="Unpacking Game" width="200" height="100">
+            This is the Unpacking Game
+        </p>
+        <p>
+            <img src="/assets/keywe-key-art.jpg" alt="KeyWe Game" width="200" height="100">
+            This is the KeyWe Game
+        </p>
+        <p>
+            <img src="/assets/snacko.jpg" alt="Snacko Game" width="200" height="100">
+            This is the Snacko Game
+        </p>
     </a>
 </div>
 
