--- a/game.html
+++ b/game.html
@@ -25,24 +25,26 @@
 </header>
 
 <!-- Body  -->
-<p> This is the Games page</p>
+<p>This is the Games page</p>
 
 
 <div class="Game-Images">
-    <a href="index.html">
         <p>
             <img src="/assets/unpacking.jpg" alt="Unpacking Game" width="200" height="100">
             This is the Unpacking Game
         </p>
-        <p>
-            <img src="/assets/keywe-key-art.jpg" alt="KeyWe Game" width="200" height="100">
-            This is the KeyWe Game
-        </p>
-        <p>
-            <img src="/assets/snacko.jpg" alt="Snacko Game" width="200" height="100">
-            This is the Snacko Game
-        </p>
-    </a>
+</div>
+<div>
+    <p>
+        <img src="/assets/keywe-key-art.jpg" alt="KeyWe Game" width="200" height="100">
+        This is the KeyWe Game
+    </p>
+</div>
+<div>
+    <p>
+        <img src="/assets/snacko.jpg" alt="Snacko Game" width="200" height="100">
+        This is the Snacko Game
+    </p>
 </div>
 
 
