--- a/game.html
+++ b/game.html
@@ -29,22 +29,24 @@
 
 
 <div class="Game-Images">
+    <div class="game-box">
         <p>
-            <img src="/assets/unpacking.jpg" alt="Unpacking Game" width="200" height="100">
+            <img src="/assets/unpacking.jpg" alt="Unpacking Game">
             This is the Unpacking Game
         </p>
-</div>
-<div>
-    <p>
-        <img src="/assets/keywe-key-art.jpg" alt="KeyWe Game" width="200" height="100">
-        This is the KeyWe Game
-    </p>
-</div>
-<div>
-    <p>
-        <img src="/assets/snacko.jpg" alt="Snacko Game" width="200" height="100">
-        This is the Snacko Game
-    </p>
+    </div>
+    <div class="game-box">
+        <p>
+            <img src="/assets/keywe-key-art.jpg" alt="KeyWe Game>
+            This is the KeyWe Game
+        </p>
+    </div>
+    <div class="game-box">
+        <p>
+            <img src="/assets/snacko.jpg" alt="Snacko Game">
+            This is the Snacko Game
+        </p>
+    </div>
 </div>
 
 
