Fixed Image placement

--- a/game.html
+++ b/game.html
@@ -37,13 +37,19 @@
     </div>
     <div class="game-box">
         <p>
-            <img src="/assets/keywe-key-art.jpg" alt="KeyWe Game>
+            <img src="/assets/keywe-key-art.jpg" alt="KeyWe Game">
             This is the KeyWe Game
         </p>
     </div>
     <div class="game-box">
         <p>
             <img src="/assets/snacko.jpg" alt="Snacko Game">
+            This is the Snacko Game
+        </p>
+    </div>
+    <div class="game-box">
+        <p>
+            <img src="/assets/brick-world-thumbnail.jpg" alt="Brick World">
             This is the Snacko Game
         </p>
     </div>
