Changed Text Placement

--- a/game.html
+++ b/game.html
@@ -36,22 +36,16 @@
         </p>
     </div>
     <div class="game-box">
-        <p>
-            <img src="/assets/keywe-key-art.jpg" alt="KeyWe Game">
-            This is the KeyWe Game
-        </p>
+        <img src="/assets/keywe-key-art.jpg" alt="KeyWe Game">
+        <span class="Text-placement">This is the KeyWe Game</span>
     </div>
     <div class="game-box">
-        <p>
-            <img src="/assets/snacko.jpg" alt="Snacko Game">
-            This is the Snacko Game
-        </p>
+        <img src="/assets/snacko.jpg" alt="Snacko Game">
+        This is the Snacko Game
     </div>
     <div class="game-box">
-        <p>
-            <img src="/assets/brick-world-thumbnail.jpg" alt="Brick World">
-            This is the Snacko Game
-        </p>
+        <img src="/assets/brick-world-thumbnail.jpg" alt="Brick World">
+        This is the Brick world Game
     </div>
 </div>
 
