Made all the text closer to the wanted position

--- a/game.html
+++ b/game.html
@@ -32,7 +32,7 @@
     <div class="game-box">
         <p>
             <img src="/assets/unpacking.jpg" alt="Unpacking Game">
-            This is the Unpacking Game
+            <span class="Text-placement">This is the Unpacking Game</span>
         </p>
     </div>
     <div class="game-box">
@@ -41,11 +41,11 @@
     </div>
     <div class="game-box">
         <img src="/assets/snacko.jpg" alt="Snacko Game">
-        This is the Snacko Game
+        <span class="Text-placement">This is the Snacko Game</span>
     </div>
     <div class="game-box">
         <img src="/assets/brick-world-thumbnail.jpg" alt="Brick World">
-        This is the Brick world Game
+        <span class="Text-placement">This is the Brick world Game</span>
     </div>
 </div>
 
