changed game page

--- a/game.html
+++ b/game.html
@@ -27,28 +27,34 @@
 <!-- Body  -->
 <p>This is the Games page</p>
 
-
-<div class="Game-Images">
-    <div class="game-box">
-        <p>
-            <img src="/assets/unpacking.jpg" alt="Unpacking Game">
-            <span class="Text-placement">This is the Unpacking Game</span>
-        </p>
+<section class="game-section game">
+    <div class="image-section">
+        <div class="game-box">
+                <img class="Game-Images" src="/assets/unpacking.jpg" alt="Unpacking Game">
+                <div class="game-detail">
+                <span class="Text-placement">This is the Unpacking Game</span>
+                </div>
+        </div>
+        <div class="game-box">
+            <img class="Game-Images" src="/assets/keywe-key-art.jpg" alt="KeyWe Game">
+            <div class="game-detail">
+                <span class="Text-placement">This is the KeyWe Game</span>
+            </div>
+        </div>
+        <div class="game-box">
+            <img class="Game-Images" src="/assets/snacko.jpg" alt="Snacko Game">
+            <div class="game-detail">
+            <span class="Text-placement">This is the Snacko Game</span>
+            </div>
+        </div>
+        <div class="game-box">
+            <img class="Game-Images" src="/assets/brick-world-thumbnail.jpg" alt="Brick World">
+            <div class="game-detail">
+            <span class="Text-placement">This is the Brick world Game</span>
+            </div>
+        </div>
     </div>
-    <div class="game-box">
-        <img src="/assets/keywe-key-art.jpg" alt="KeyWe Game">
-        <span class="Text-placement">This is the KeyWe Game</span>
-    </div>
-    <div class="game-box">
-        <img src="/assets/snacko.jpg" alt="Snacko Game">
-        <span class="Text-placement">This is the Snacko Game</span>
-    </div>
-    <div class="game-box">
-        <img src="/assets/brick-world-thumbnail.jpg" alt="Brick World">
-        <span class="Text-placement">This is the Brick world Game</span>
-    </div>
-</div>
-
+</section>
 
 
 
