--- a/store.html
+++ b/store.html
@@ -77,69 +77,24 @@
                     <i class='bx bxs-error-circle' ></i>
                     <small>Error Message</small>
                 </div>
-                <button>Submit</button>
+                <button type="submit">Submit</button>
+                <button type="reset">Reset</button>
             </form>
         </div>
-
-            <!--Content-->
-<!--            <div class="form-content">-->
-<!--                <form id="form" action="#" method="get">-->
-<!--                    <div>-->
-<!--                        <div class="error" id="1"></div>-->
-<!--                        <label class="form-title" for="name">Full name</label>-->
-<!--                        <input class="form-input" id="name" name="Full name" type="text">-->
-<!--                    </div>-->
-<!--                    <div>-->
-<!--                        <div class="error" id="2"></div>-->
-<!--                        <label class="form-title" for="email">Email</label>-->
-<!--                        <input class="form-input" id="email" name="Email" type="email">-->
-<!--                    </div>-->
-<!--                    <div>-->
-<!--                        <div class="error" id="3"></div>-->
-<!--                        <label class="form-title" for="email-confirm">Confirm Email</label>-->
-<!--                        <input class="form-input" id="email-confirm" name="email confirmation" type="email">-->
-<!--                    </div>-->
-<!--                    <div>-->
-<!--                        <div class="error" id="4"></div>-->
-<!--                        <label class="form-title" for="phone">Phone number</label>-->
-<!--                        <input class="form-input" id="phone" name="Phone Number" type="number" placeholder="+64 00-0000-0000">-->
-<!--                    </div>-->
-<!--                    <div id="drop-down-list">-->
-<!--                    </div>-->
-<!--                    <div id="check-box">-->
-<!--                        <input id="terms" type="checkbox">-->
-<!--                        <label class="form-title" for="terms">Must accept Terms and conditions</label>-->
-<!--                    </div>-->
-<!--                    <button type="submit">Submit</button>-->
-<!--                </form>-->
-
-
-
-<!--            </div>-->
-            <!--Total-->
-<!--            <div class="total form-total">-->
-<!--                <div class="total-title form-total-title">Total</div>-->
-<!--                <div class="total-price form-price">$0.00</div>-->
-<!--            </div>-->
-<!--            &lt;!&ndash;purchase button&ndash;&gt;-->
-<!--            <button type="button" class="btn-complete">Complete Purchase</button>-->
-<!--            &lt;!&ndash;cart close&ndash;&gt;-->
-<!--            <i class='bx bx-x' id="close-form"></i>-->
-<!--        </div>-->
     <!--billing form end-->
 
 
         <section class="shop content-section">
             <h2 class="section-title">Browse Games</h2>
             <div class="shop-items">
-                    <div class="shop-item">
-                        <img src="/assets/brick-world-thumbnail.jpg" class="shop-item-image">
-                        <div class="shop-item-details">
-                            <span class="shop-item-title">Brick World</span>
-                            <span class="shop-item-price">$16.99</span>
-                            <button type="button" class="shop-item-button">Add to cart</button>
-                        </div>
+                <div class="shop-item">
+                    <img src="/assets/brick-world-thumbnail.jpg" class="shop-item-image">
+                    <div class="shop-item-details">
+                        <span class="shop-item-title">Brick World</span>
+                        <span class="shop-item-price">$16.99</span>
+                        <button type="button" class="shop-item-button">Add to cart</button>
                     </div>
+                </div>
                 <div class="shop-item">
                     <img src="/assets/keywe-key-art.jpg" class="shop-item-image">
                     <div class="shop-item-details">
