Updated Contact Page and added info

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,23 @@
     </div>
 </header>
 <p>This is the Contact page</p>
+<p>This is the contact info of our team here at Spaghetti Code</p>
 
+<address>
+    Our Lead Games Designer Larry<br>
+    <a href="Larry.Rivada@spaghetti.com">Larry.Rivada@spaghetti.com</a><br>
+    <a href="tel:+643115552368">(311) 555-2368</a><br>
+</address>
+<address>
+    Our AI Programmer Paul<br>
+    <a href="Paul.Allen@spaghetti.com">Paul.Allen@spaghetti.com</a><br>
+    <a href="tel:+643116261811">(311) 626-1811</a><br>
+</address>
+<address>
+    Our Enviroment Artist Trent<br>
+    <a href="Trent.Maunsell-Beanland@spaghetti.com">Trent.Maunsell-Beanland@spaghetti.com</a><br>
+    <a href="tel:+643105434357">(310) 543-4357</a><br>
+</address>
 <footer>
     <!-- footer section -->
     <div class="footer">
