Added Images and touched up contact info

--- a/contact.html
+++ b/contact.html
@@ -25,53 +25,74 @@
 </header>
 <p>This is the Contact page</p>
 <p>This is the contact info of our team here at Spaghetti Code</p>
-
-<address>
-    Our Lead Games Designer Larry<br>
-    <a href="Larry.Rivada@spaghetti.com">Larry.Rivada@spaghetti.com</a><br>
-    <a href="tel:+643115552368">(311) 555-2368</a><br>
-</address>
-<address>
-    Our AI Programmer Paul<br>
-    <a href="Paul.Allen@spaghetti.com">Paul.Allen@spaghetti.com</a><br>
-    <a href="tel:+643116261811">(311) 626-1811</a><br>
-</address>
-<address>
-    Our Enviroment Artist Trent<br>
-    <a href="Trent.Maunsell-Beanland@spaghetti.com">Trent.Maunsell-Beanland@spaghetti.com</a><br>
-    <a href="tel:+643105434357">(310) 543-4357</a><br>
-</address>
-<footer>
-    <!-- footer section -->
-    <div class="footer">
-        <ul>
-            <li><strong><h2>Download our app</h2></strong></li>
-            <li>Download the spaghetti code app to get daily updates with our new events!</li>
-        </ul>
-        <div id="footer-links">
-            <ul>
-                <li>About</li>
-                <li>Game</li>
-                <li>Event</li>
-                <li>Help Us Improve</li>
-                <li>Store</li>
-            </ul>
+<div class="StaffContact">
+        <div class="StaffContactText">
+            <address>
+                <h4>Our Lead Games Designer: Larry Rivada</h4><br
+                <a href="Larry.Rivada@spaghetti.com">Larry.Rivada@spaghetti.com</a><br>
+                <a href="tel:+643115552368">(311) 555-2368</a><br>
+                <a>21 Cross Road, Flagstaff, <br>Hamilton, 3206</a>
+                <div class="StaffContactImages">
+                    <img src="/assets/JeffKaplan.jpg" alt="JeffKaplan" class="StaffContactImages">
+                </div>
+            </address>
         </div>
-        <div id="footer-sign">
-            <ul>
-                <li><img src="/assets/facebook.png"></li>
-                <li><img src="/assets/twitter.png"></li>
-                <li><img src="/assets/instagram.png"></li>
-                <li><img src="/assets/youtube.png"></li>
-            </ul>
-            <img id="img-container" src="/assets/logoPNG.png">
-            <div id="footer-paragraph">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>
-                <br />
-                <p> &copy; 2022 Spaghetti Code New Zealand, Inc. All rights reserved.</p>
-            </div>
+    <br>
+        <div class="StaffContactText">
+            <address>
+                <h4>Our AI Programmer: Paul Allen</h4><br>
+                <a href="Paul.Allen@spaghetti.com">Paul.Allen@spaghetti.com</a><br>
+                <a href="tel:+643116261811">(311) 626-1811</a><br>
+                <a>95 Hillpark Drive, Pokeno, <br>Auckland, 2402</a>
+                <div class="StaffContactImages">
+                    <img src="/assets/DripKaplan.jpg" alt="DripKaplan" class="StaffContactImages">
+                </div>
+            </address>
         </div>
-    </div>
-</footer>
+    <br>
+        <div class="StaffContactText">
+            <address>
+                <h4>Our Enviroment Artist: Trent Maunsell-Beanland</h4><br>
+                <a href="Trent.Maunsell-Beanland@spaghetti.com">Trent.Maunsell-Beanland@spaghetti.com</a><br>
+                <a href="tel:+643105434357">(310) 543-4357</a><br>
+                <a>33 Kahikatea Drive, Melville, <br>Hamilton, 3206</a>
+                <div class="StaffContactImages">
+                    <img src="/assets/Gaben.jpg" alt="Gaben" class="StaffContactImages">
+                </div>
+            </address>
+        </div>
+</div>
+<!--<footer>-->
+<!--    &lt;!&ndash; footer section &ndash;&gt;-->
+<!--    <div class="footer">-->
+<!--        <ul>-->
+<!--            <li><strong><h2>Download our app</h2></strong></li>-->
+<!--            <li>Download the spaghetti code app to get daily updates with our new events!</li>-->
+<!--        </ul>-->
+<!--        <div id="footer-links">-->
+<!--            <ul>-->
+<!--                <li>About</li>-->
+<!--                <li>Game</li>-->
+<!--                <li>Event</li>-->
+<!--                <li>Help Us Improve</li>-->
+<!--                <li>Store</li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--        <div id="footer-sign">-->
+<!--            <ul>-->
+<!--                <li><img src="/assets/facebook.png"></li>-->
+<!--                <li><img src="/assets/twitter.png"></li>-->
+<!--                <li><img src="/assets/instagram.png"></li>-->
+<!--                <li><img src="/assets/youtube.png"></li>-->
+<!--            </ul>-->
+<!--            <img id="img-container" src="/assets/logoPNG.png">-->
+<!--            <div id="footer-paragraph">-->
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>-->
+<!--                <br />-->
+<!--                <p> &copy; 2022 Spaghetti Code New Zealand, Inc. All rights reserved.</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</footer>-->
 </body>
 </html>
