added feature on store page

--- a/store.html
+++ b/store.html
@@ -44,44 +44,19 @@
 
     <!-- Body  -->
 
+        <section class="shop featured-section">
+            <h2 class="featured-title">Featured Game</h2>
+            <div class="featured-shop-items">
+                <div class="featured-game"><img src="/assets/brick-world-thumbnail.jpg" class="shop-item-image"></div>
+                <div class="featured-details">
+                    <span class="featured shop-item-title">Poop world</span>
+                    <span class="featured shop-item-price">$16.99</span>
+                    <button type="button" class="featured shop-item-button">Add to cart</button>
+                </div>
+            </div>
 
-    <!--billing form-->
-        <div class="billing-form">
-            <div class="billing-title"><h2 class="form-name">Billing Form</h2></div>
-            <form class="form" id="form" action="/" method="get">
-                <div class="form-control">
-                    <label>Full name</label>
-                    <input  id="name" type="text" placeholder="Name">
-                    <i class='bx bxs-check-circle'></i>
-                    <i class='bx bxs-error-circle' ></i>
-                    <small>Error Message</small>
-                </div>
-                <div class="form-control" id="none">
-                    <label>Email</label>
-                    <input  id="email" type="email" placeholder="Email Address">
-                    <i class='bx bxs-check-circle'></i>
-                    <i class='bx bxs-error-circle' ></i>
-                    <small>Error Message</small>
-                </div>
-                <div class="form-control">
-                    <label>Confirm Email</label>
-                    <input  id="confirm-email" type="email" placeholder="Confirm Email Address">
-                    <i class='bx bxs-check-circle'></i>
-                    <i class='bx bxs-error-circle' ></i>
-                    <small>Error Message</small>
-                </div>
-                <div class="form-control">
-                    <label>Phone Number</label>
-                    <input  id="phone" type="number" placeholder="Phone No.">
-                    <i class='bx bxs-check-circle'></i>
-                    <i class='bx bxs-error-circle' ></i>
-                    <small>Error Message</small>
-                </div>
-                <button type="submit">Submit</button>
-                <button type="reset">Reset</button>
-            </form>
-        </div>
-    <!--billing form end-->
+        </section>
+
 
 
         <section class="shop content-section">
@@ -184,6 +159,45 @@
 
         </div>
     </section>
+
+
+    <!--billing form-->
+    <div class="billing-form">
+        <div class="billing-title"><h2 class="form-name">Billing Form</h2></div>
+        <form class="form" id="form" action="/" method="get">
+            <div class="form-control">
+                <label>Full name</label>
+                <input  id="name" type="text" placeholder="Name">
+                <i class='bx bxs-check-circle'></i>
+                <i class='bx bxs-error-circle' ></i>
+                <small>Error Message</small>
+            </div>
+            <div class="form-control" id="none">
+                <label>Email</label>
+                <input  id="email" type="email" placeholder="Email Address">
+                <i class='bx bxs-check-circle'></i>
+                <i class='bx bxs-error-circle' ></i>
+                <small>Error Message</small>
+            </div>
+            <div class="form-control">
+                <label>Confirm Email</label>
+                <input  id="confirm-email" type="email" placeholder="Confirm Email Address">
+                <i class='bx bxs-check-circle'></i>
+                <i class='bx bxs-error-circle' ></i>
+                <small>Error Message</small>
+            </div>
+            <div class="form-control">
+                <label>Phone Number</label>
+                <input  id="phone" type="number" placeholder="Phone No.">
+                <i class='bx bxs-check-circle'></i>
+                <i class='bx bxs-error-circle' ></i>
+                <small>Error Message</small>
+            </div>
+            <button type="submit">Submit</button>
+            <button type="reset">Reset</button>
+        </form>
+    </div>
+    <!--billing form end-->
 
 
 
