--- a/contact.html
+++ b/contact.html
@@ -62,37 +62,65 @@
             </address>
         </div>
 </div>
-<!--<footer>-->
-<!--    &lt;!&ndash; footer section &ndash;&gt;-->
-<!--    <div class="footer">-->
-<!--        <ul>-->
-<!--            <li><strong><h2>Download our app</h2></strong></li>-->
-<!--            <li>Download the spaghetti code app to get daily updates with our new events!</li>-->
-<!--        </ul>-->
-<!--        <div id="footer-links">-->
-<!--            <ul>-->
-<!--                <li>About</li>-->
-<!--                <li>Game</li>-->
-<!--                <li>Event</li>-->
-<!--                <li>Help Us Improve</li>-->
-<!--                <li>Store</li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div id="footer-sign">-->
-<!--            <ul>-->
-<!--                <li><img src="/assets/facebook.png"></li>-->
-<!--                <li><img src="/assets/twitter.png"></li>-->
-<!--                <li><img src="/assets/instagram.png"></li>-->
-<!--                <li><img src="/assets/youtube.png"></li>-->
-<!--            </ul>-->
-<!--            <img id="img-container" src="/assets/logoPNG.png">-->
-<!--            <div id="footer-paragraph">-->
-<!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>-->
-<!--                <br />-->
-<!--                <p> &copy; 2022 Spaghetti Code New Zealand, Inc. All rights reserved.</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</footer>-->
+<br>
+<div class="container">
+    <form action="action_page.php">
+        <h2>Contact Form</h2>
+        <h3>Use this to contact us if you have any questions or problems with our products or staff.</h3><br>
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="Your First name...">
+
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="Your Last name...">
+
+        <label for="country">Country</label>
+        <select id="country" name="country">
+            <option value="new-zealand">New Zealand</option>
+            <option value="australia">Australia</option>
+            <option value="canada">Canada</option>
+            <option value="usa">USA</option>
+            <option value="germany">Germany</option>
+            <option value="uk">UK</option>
+        </select>
+
+        <label for="subject">Subject</label>
+        <textarea id="subject" name="subject" placeholder="Write something..." style="height:200px"></textarea>
+
+        <input type="submit" value="Submit">
+    </form>
+</div>
+
+<footer>
+    <!-- footer section -->
+    <div class="footer">
+        <ul>
+            <li><strong><h2>Download our app</h2></strong></li>
+            <li>Download the spaghetti code app to get daily updates with our new events!</li>
+        </ul>
+        <div id="footer-links">
+            <ul>
+                <li>About</li>
+                <li>Game</li>
+                <li>Event</li>
+                <li>Help Us Improve</li>
+                <li>Store</li>
+            </ul>
+        </div>
+        <div id="footer-sign">
+            <ul>
+                <li><img src="/assets/facebook.png"></li>
+                <li><img src="/assets/twitter.png"></li>
+                <li><img src="/assets/instagram.png"></li>
+                <li><img src="/assets/youtube.png"></li>
+            </ul>
+            <img id="img-container" src="/assets/logoPNG.png">
+            <div id="footer-paragraph">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>
+                <br />
+                <p> &copy; 2022 Spaghetti Code New Zealand, Inc. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
