Changed CSS name to ContactForm

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         </div>
 </div>
 <br>
-<div class="container">
+<div class="ContactForm">
     <form action="action_page.php">
         <h2>Contact Form</h2>
         <h3>Use this to contact us if you have any questions or problems with our products or staff.</h3><br>
