added feature on store page

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 <div class="StaffContact">
         <div class="StaffContactText">
             <address>
-                <h4>Our Lead Games Designer: Larry Rivada</h4><br
+                <h4>Our Lead Games Designer: Larry Rivada</h4><br>
                 <a href="Larry.Rivada@spaghetti.com">Larry.Rivada@spaghetti.com</a><br>
                 <a href="tel:+643115552368">(311) 555-2368</a><br>
                 <a>21 Cross Road, Flagstaff, <br>Hamilton, 3206</a>
