--- a/store.html
+++ b/store.html
@@ -47,10 +47,10 @@
         <section class="shop featured-section">
             <h2 class="featured-title">Featured Game</h2>
             <div class="featured-shop-items">
-                <div class="featured-game"><img src="/assets/brick-world-thumbnail.jpg" class="shop-item-image"></div>
+                <div class="featured-game"><img src="/assets/Bundle.jpg" class="shop-item-image"></div>
                 <div class="featured-details">
-                    <span class="featured shop-item-title">Poop world</span>
-                    <span class="featured shop-item-price">$16.99</span>
+                    <span class="featured shop-item-title">Game Bundle</span>
+                    <span class="featured shop-item-price">$50.00</span>
                     <button type="button" class="featured shop-item-button">Add to cart</button>
                 </div>
             </div>
