Home page parallax effect

--- a/index.html
+++ b/index.html
@@ -24,9 +24,18 @@
             </div>
         </header>
 
-        <!-- Body  -->
-        <p> This is the home page</p>
+        <div class="margin">
 
+            <section class="parallax">
+                <div class="parallax-inner">
+                    <h1>"Ready...set-y...spaghetti!"</h1>
+                </div>
+            </section>
+
+        </div>
+        <div class="home">
+            <br>
+        </div>
 
 
 
