--- a/store.html
+++ b/store.html
@@ -165,9 +165,9 @@
     <div class="billing-form">
         <div class="billing-title"><h2 class="form-name">Billing Form</h2></div>
         <form class="form" id="form" action="/" method="get">
-            <div class="form-control">
+            <div class="form-controls">
                 <label>Full name</label>
-                <input  id="name" type="text" placeholder="Name">
+                <input  id="name" type="name" placeholder="Name">
                 <i class='bx bxs-check-circle'></i>
                 <i class='bx bxs-error-circle' ></i>
                 <small>Error Message</small>
