--- a/staff.html
+++ b/staff.html
@@ -25,9 +25,31 @@
 </header>
 
 <!-- Body  -->
-<p> This is the home page</p>
-
-
+<p> This is the Staff page</p>
+<p>This is our team here at Spaghetti Code</p>
+<div class="Staff">
+<!--    <div class="topStaff" style="flex-grow: 1; padding: 20px;">-->
+<!--        <img src="/assets/JeffKaplan.jpg" alt="JeffKaplan" class="StaffContactImages">-->
+<!--        <div class="nav" style="flex-grow: 8; padding: 20px;"</div>-->
+<!--    </div>-->
+    <div class="bottomStaff">
+        <div class="mainStaff">
+            <img src="/assets/JeffKaplan.jpg" alt="JeffKaplan" class="StaffContactImages">
+        </div>
+        <div class="sideStaff">
+            <div class="columnStaff">
+                <h1>Larry Rivida - Lead Games Designer</h1>
+                <h3>Larry Rivida is our Lead Games Designer and the powerhouse of the team, this man really loves to code, and loves seeing everyones comments on the games as it helps him grow and produce better content</h3>
+            </div>
+            <div class="columnStaff">
+                <h2>Contact Details</h2>
+                <h3>Email:</h3>
+                <h3>Phone Number:</h3>
+                <h3>Address:</h3>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
