Home page parallax effect

--- a/store.html
+++ b/store.html
@@ -165,7 +165,7 @@
     <div class="billing-form">
         <div class="billing-title"><h2 class="form-name">Billing Form</h2></div>
         <form class="form" id="form" action="/" method="get">
-            <div class="form-controls">
+            <div class="form-control">
                 <label>Full name</label>
                 <input  id="name" type="name" placeholder="Name">
                 <i class='bx bxs-check-circle'></i>
