--- a/index.html
+++ b/index.html
@@ -2,73 +2,79 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel=" stylesheet" href="stylesheet.css">
+        <link rel=" stylesheet" href="homeStyle.css">
         <title>Amazing wow</title>
     </head>
     <body>
+
         <header>
-            <div class="container">
-                <a href="index.html">
-                    <img src="/assets/logoPNG.png" alt="logo" class="logo">
-                </a>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="game.html">Game</a></li>
-                        <li><a href="staff.html">Staff</a></li>
-                        <li><a href="store.html">Store</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
+
+            <div class="logo"><a href="index.html"><img src="/assets/logoPNG_DropShadow.png" alt="logo" class="logo"></a></div>
+
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="game.html">Game</a></li>
+                <li><a href="staff.html">Staff</a></li>
+                <li><a href="store.html">Store</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </header>
+        <section>
+            <img src="assets/parallax/09_Forest.png" id="bush">
+            <img src="assets/parallax/08_Forest.png" id="skyblueTree">
+            <img src="assets/parallax/07_Forest.png" id="lighterBlueTree">
+            <img src="assets/parallax/06_Forest.png" id="darkblueTree">
+            <img src="assets/parallax/05_Particles.png" id="firstParticle">
+            <h2 id="text">"Ready...Set-y...Spaghetti!"</h2>
+            <img src="assets/parallax/04_Forest.png" id="darkerBlueTree">
+            <img src="assets/parallax/03_Particles.png" id="secondParticle">
+            <img src="assets/parallax/02_Bushes.png" id="bush2">
+            <img src="assets/parallax/01_Mist.png" id="mist">
 
-        <div class="margin">
-
-            <section class="parallax">
-                <div class="parallax-inner">
-                    <h1>"Ready...set-y...spaghetti!"</h1>
-                </div>
-            </section>
-
+        </section>
+        <div class="sec" id="sec">
+            <h2>Main Body</h2>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                <br><br>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                <br><br>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
         </div>
-        <div class="home">
-            <br>
-        </div>
 
-        <!-- Body  -->
-        <footer>
-                <!-- footer section -->
-                <div class="footer">
-                    <ul>
-                        <li><strong><h2>Download our app</h2></strong></li>
-                        <li>Download the spaghetti code app to get daily updates with our new events!</li>
-                    </ul>
-                    <div id="footer-links">
-                        <ul>
-                            <li>About</li>
-                            <li>Game</li>
-                            <li>Event</li>
-                            <li>Help Us Improve</li>
-                            <li>Store</li>
-                        </ul>
-                    </div>
-                    <div id="footer-sign">
-                        <ul>
-                            <li><img src="/assets/facebook.png"></li>
-                            <li><img src="/assets/twitter.png"></li>
-                            <li><img src="/assets/instagram.png"></li>
-                            <li><img src="/assets/youtube.png"></li>
-                        </ul>
-                        <img id="img-container" src="/assets/logoPNG.png">
-                        <div id="footer-paragraph">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>
-                            <br />
-                            <p> &copy; 2022 Spaghetti Code New Zealand, Inc. All rights reserved.</p>
-                        </div>
-                    </div>
-                </div>
-        </footer>
+    <script>
+
+        let firstParticle = document.getElementById('firstParticle')
+        let text = document.getElementById('text')
+        let secondParticle = document.getElementById('secondParticle')
+        let bush2 = document.getElementById('bush2')
+        let mist = document.getElementById('mist')
+        let header = document.querySelector('header')
+
+        window.addEventListener('scroll', function (){
+            let value = window.scrollY;
+            firstParticle.style.left = value * 0.25 + 'px';
+            secondParticle.style.top = value * -0.25 + 'px';
+
+            mist.style.top = value * 0.95 + 'px';
+            bush2.style.top = value * 0.95 + 'px';
+            text.style.marginBottom = value * 1.5 + 'px';
+
+
+        })
+
+    </script>
+
     </body>
 </html>
