--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
         window.addEventListener('scroll', function (){
             let value = window.scrollY;
-            firstParticle.style.left = value * 0.25 + 'px';
-            secondParticle.style.top = value * -0.25 + 'px';
+            firstParticle.style.left = value * -0.25 + 'px';
+            secondParticle.style.left = value * 0.25 + 'px';
 
             mist.style.top = value * 0.95 + 'px';
             bush2.style.top = value * 0.95 + 'px';
