--- a/store.html
+++ b/store.html
@@ -7,40 +7,74 @@
         <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
+
     <header>
-        <div class="container">
-            <a href="index.html">
-                <img src="/assets/logoPNG.png" alt="logo" class="logo">
-            </a>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="game.html">Game</a></li>
-                    <li><a href="staff.html">Staff</a></li>
-                    <li><a href="store.html">Store</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <i class='bx bxs-shopping-bag' id="cart-icon"></i>
-                    <span class="bag-quantity">0</span>
-                    <div class="cart">
-                        <h2 class="cart-title">Your Cart</h2>
-                        <!--Content-->
-                        <div class="cart-content">
-                        </div>
-                            <!--Total-->
-                            <div class="total">
-                                <div class="total-title">Total</div>
-                                <div class="total-price">$0.00</div>
-                            </div>
-                            <!--purchase button-->
-                            <button type="button" class="btn-buy">Complete Purchase</button>
-                            <!--cart close-->
-                            <i class='bx bx-x' id="close-cart"></i>
-                        </div>
-                 </ul>
-            </nav>
-        </div>
+        <div class="logo"><a href="index.html"><img src="/assets/logoPNG_DropShadow.png" alt="logo" class="logo"></a></div>
+
+        <ul>
+            <li><a href="index.html" >Home</a></li>
+            <li><a href="game.html">Game</a></li>
+            <li><a href="staff.html">Staff</a></li>
+            <li><a href="store.html" class="active">Store</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><i class='bx bxs-shopping-bag' id="cart-icon"></i>
+            <span class="bag-quantity">0</span>
+                <div class="cart">
+                    <h2 class="cart-title">Your Cart</h2>
+                    <!--Content-->
+                    <div class="cart-content">
+                    </div>
+                    <!--Total-->
+                    <div class="total">
+                        <div class="total-title">Total</div>
+                        <div class="total-price">$0.00</div>
+                    </div>
+                    <!--purchase button-->
+                    <button type="button" class="btn-buy">Complete Purchase</button>
+                    <!--cart close-->
+                    <i class='bx bx-x' id="close-cart"></i>
+                </div>
+            </li>
+        </ul>
+            </header>
+
+        </ul>
     </header>
+<!--    <header>-->
+<!--        <div class="container">-->
+<!--            <a href="index.html">-->
+<!--                <img src="/assets/logoPNG.png" alt="logo" class="logo">-->
+<!--            </a>-->
+<!--            <nav>-->
+<!--                <ul>-->
+<!--                    <li><a href="index.html">Home</a></li>-->
+<!--                    <li><a href="game.html">Game</a></li>-->
+<!--                    <li><a href="staff.html">Staff</a></li>-->
+<!--                    <li><a href="store.html">Store</a></li>-->
+<!--                    <li><a href="about.html">About</a></li>-->
+<!--                    <li><a href="contact.html">Contact</a></li>-->
+<!--                    <i class='bx bxs-shopping-bag' id="cart-icon"></i>-->
+<!--                    <span class="bag-quantity">0</span>-->
+<!--                    <div class="cart">-->
+<!--                        <h2 class="cart-title">Your Cart</h2>-->
+<!--                        &lt;!&ndash;Content&ndash;&gt;-->
+<!--                        <div class="cart-content">-->
+<!--                        </div>-->
+<!--                            &lt;!&ndash;Total&ndash;&gt;-->
+<!--                            <div class="total">-->
+<!--                                <div class="total-title">Total</div>-->
+<!--                                <div class="total-price">$0.00</div>-->
+<!--                            </div>-->
+<!--                            &lt;!&ndash;purchase button&ndash;&gt;-->
+<!--                            <button type="button" class="btn-buy">Complete Purchase</button>-->
+<!--                            &lt;!&ndash;cart close&ndash;&gt;-->
+<!--                            <i class='bx bx-x' id="close-cart"></i>-->
+<!--                        </div>-->
+<!--                 </ul>-->
+<!--            </nav>-->
+<!--        </div>-->
+<!--    </header>-->
 
     <!-- Body  -->
 
