--- a/contact.html
+++ b/contact.html
@@ -7,21 +7,17 @@
 </head>
 <body>
 <header>
-    <div class="container">
-        <a href="index.html">
-            <img src="/assets/logoPNG.png" alt="logo" class="logo">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="game.html">Game</a></li>
-                <li><a href="staff.html">Staff</a></li>
-                <li><a href="store.html">Store</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
+
+    <div class="logo"><a href="index.html"><img src="/assets/logoPNG_DropShadow.png" alt="logo" class="logo"></a></div>
+
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="game.html">Game</a></li>
+        <li><a href="staff.html">Staff</a></li>
+        <li><a href="store.html">Store</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+    </ul>
 </header>
 <p>This is the Contact page</p>
 <p>This is the contact info of our team here at Spaghetti Code</p>
