staff size image fixed

--- a/staff.html
+++ b/staff.html
@@ -24,7 +24,7 @@
 <div class="Staff">
     <div class="topStaff" style="flex-grow: 1; padding: 20px;">
         <h1>This is our team here at Spaghetti Code</h1>
-        <div class="nav" style="flex-grow: 8; padding: 20px;"</div>
+        <div class="nav" style="flex-grow: 8; padding: 20px;"></div>
     </div>
     <div class="bottomStaff">
         <div class="mainStaff">
